# mybot_open_loop

./: README.md  cpmbot control instruction
mybot_basic_mov_control/: CMakeLists.txt  package.xml
mybot_basic_mov_control/launch/: mybot_arduino.launch  mybot_open_loop_arduino.launch
mybot_basic_mov_control/src/: mybot_basic_mov_control.cpp
mybot_msg/: CMakeLists.txt  package.xml
mybot_msg/msg/: msgMybot_basicMovement.msg  msgMybot_basicMovement_output  msgMybot_detailMovement.msg
operator_input/: CMakeLists.txt  package.xml
operator_input/launch/: JoyOpCmds.launch  Untitled Document  joy_ngs.launch
operator_input/msg/: operator_cmds_msg.msg
operator_input/src/: opc  operator_cmds.cpp
